Fix footer language select on mobile

--- a/resources/assets/sass/_footer.scss
+++ b/resources/assets/sass/_footer.scss
@@ -4,7 +4,8 @@
     border-top: 1px $gray-lighter solid;
 
     .languages {
-      background: $white;
+        background: $white;
+        margin-bottom: 2rem;
     }
 }
 
@@ -29,4 +30,20 @@
 
 address {
     margin-bottom: 0;
+}
+
+@include media-breakpoint-up(sm) {
+    .footer {
+        display: flex;
+
+        .media {
+          order: 1;
+          margin-right: auto;
+        }
+
+        .footer-language {
+            order: 2;
+            width: 180px;
+        }
+    }
 }
